# SnakeGame

./: CMakeLists.txt  Makefile  README.md
src/: animal.cpp  animal.h  food.cpp  food.h  game.cpp  game.h  main.cpp  point.h  rat.cpp  rat.h  renderer.cpp  renderer.h  snake  snake.cpp  snake.h  test.cpp.save
